i3blocks - add bandwidth block

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -10,6 +10,12 @@ command=~/.i3blocks-contrib/$BLOCK_NAME/$BLOCK_NAME
 color=#C9CCDB
 separator_block_width=15
 
+[bandwidth2]
+command=~/.i3blocks-contrib/bandwidth2/bandwidth2 -t 3
+interval=persist
+markup=pango
+LABEL=
+
 [cpu_usage]
 label= 
 interval=5
