--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -5,5 +5,6 @@
   "rust-analyzer.inlayHints.parameterHints.enable": false,
   "rust-analyzer.inlayHints.chainingHints.enable": false,
   "rust-analyzer.inlayHints.closingBraceHints.enable": false,
+  "rust-analyzer.diagnostics.disabled": ["inactive-code"],
   "suggest.minTriggerInputLength": 2
 }
