vim - Disable pre-selecting the first autocompletion suggestion by default

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -6,5 +6,6 @@
   "rust-analyzer.inlayHints.chainingHints.enable": false,
   "rust-analyzer.inlayHints.closingBraceHints.enable": false,
   "rust-analyzer.diagnostics.disabled": ["inactive-code"],
+  "suggest.noselect": true,
   "suggest.minTriggerInputLength": 2
 }
