--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -6,7 +6,7 @@
   "rust-analyzer.inlayHints.chainingHints.enable": false,
   "rust-analyzer.inlayHints.closingBraceHints.enable": false,
   "rust-analyzer.inlayHints.genericParameterHints.const.enable": false,
-  "rust-analyzer.diagnostics.disabled": ["inactive-code"],
+  "rust-analyzer.diagnostics.disabled": ["inactive-code", "macro-error"],
   "suggest.noselect": true,
   "suggest.minTriggerInputLength": 2
 }
