i3blocks: Use volume-pipewire instead of volume-pulseaudio

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -39,10 +39,16 @@ interval=120
 
 #laptop_end
 
-[volume-pulseaudio]
+[volume-pipewire]
 interval=once
 signal=2
-AUDIO_MED_THRESH=10
+# Note the trailing whitespace in the following variables.
+# Quotes can't be used here because they appear in the system tray.
+AUDIO_HIGH_SYMBOL=  
+AUDIO_MED_THRESH=40
+AUDIO_MED_SYMBOL=  
+AUDIO_LOW_THRESH=0
+AUDIO_LOW_SYMBOL=  
 LONG_FORMAT="${SYMB}${VOL}%"
 
 [language]
