--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -7,6 +7,7 @@
   "rust-analyzer.inlayHints.closingBraceHints.enable": false,
   "rust-analyzer.inlayHints.genericParameterHints.const.enable": false,
   "rust-analyzer.diagnostics.disabled": ["inactive-code", "macro-error"],
+  "rust-analyzer.cargo.features": "all",
   "suggest.noselect": true,
   "suggest.minTriggerInputLength": 2
 }
