--- a/terminator/config
+++ b/terminator/config
@@ -8,6 +8,7 @@
 [keybindings]
 [profiles]
   [[default]]
+    allow_bold = True
     background_color = "#171717"
     cursor_color = "#aaaaaa"
     foreground_color = "#ebdbb2"
