--- a/i3/config
+++ b/i3/config
@@ -225,6 +225,7 @@ bindsym Print exec --no-startup-id gnome-screenshot
 # other
 bindsym $mod+Shift+f [class="Pcmanfm"] focus
 
+for_window [class="zoom"] floating enable
 for_window [class="Lxappearance"] floating enable
 for_window [class="Yad"] floating enable # calendar
 
