--- a/i3/config
+++ b/i3/config
@@ -148,6 +148,7 @@ exec_always --no-startup-id $SHELL -c "if [ ! -d /sys/module/battery/ ] && [ ! -
 bar {
     # use the generated i3blocks config file
     status_command i3blocks -c $HOME/.config/i3/i3blocks.conf
+    tray_output primary
 
     colors {
         background #333333
