--- a/i3/config
+++ b/i3/config
@@ -182,14 +182,14 @@ mode "$mode_system" {
 bindsym Pause mode "$mode_system"
 
 # audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pkill -RTMIN+2 i3blocks
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && pkill -RTMIN+2 i3blocks
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && pkill -RTMIN+2 i3blocks
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # sadly my durgod keyboard doesn't allow me to reverse the functionality of the F keys
 # so I just map F6, F7 in addition to the audio keys above for controlling the volume
-bindsym F7 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && pkill -RTMIN+2 i3blocks
-bindsym F6 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && pkill -RTMIN+2 i3blocks
+bindsym F7 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym F6 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
 
 # screen brightness controls
 bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight -inc 10 && pkill -RTMIN+1 i3blocks
@@ -205,6 +205,7 @@ workspace $workspace8 output nonprimary
 exec firefox
 exec --no-startup-id dunst
 exec --no-startup-id pasystray --volume-inc=5
+exec --no-startup-id systemctl --user start pactl-subscriber
 exec --no-startup-id xcompmgr -f -D 4 # for the fading effect when changing workspaces
 exec_always --no-startup-id feh --bg-fill $HOME/.dotfiles/i3/imgs/wallpaper.jpg # set custom walppaper
 exec_always --no-startup-id nm-applet
